deploy/deployment.yaml
# Auth Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication-service
  namespace: egs-ressellr
spec:
  replicas: 2
  selector:
    matchLabels:
      app: authentication-service
  template:
    metadata:
      labels:
        app: authentication-service
    spec:
      containers:
      - name: authentication-service
        image: registry.deti:5000/egs-ressellr/authentication-service:v2
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000


---

# Authentication Service
apiVersion: v1
kind: Service
metadata:
  name: authentication-service
  namespace: egs-ressellr
spec:
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: authentication-service

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: messages
  namespace: egs-ressellr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messages
  template:
    metadata:
      labels:
        app: messages
    spec:
      containers:
      - name: messages
        image: registry.deti:5000/egs-ressellr/messages-service:v1
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "32Mi"
            cpu: "10m"
          limits:
            memory: "128Mi"
            cpu: "500m"
      volumes:
      - name: messages-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
---

apiVersion: v1
kind: Service
metadata:
  name: messages-service
  namespace: egs-ressellr
spec:
  selector:
    app: messages
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  #type: LoadBalancer

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ressellr
  namespace: egs-ressellr
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  rules:
  - host: app-ressellr.k3s
    http:
      paths:
      - path: /authorize
        pathType: Prefix
        backend:
          service:
            name: authentication-service
            port: 
              number: 5000
      - path: /messages
        pathType: Prefix
        backend:
          service:
            name: messages-service
            port: 
              number: 3000
